# StepToXXX

./: pyproject.toml
src/step_to_obj/: converter.py  gui.py
